# 3d

./: README.md
project/gsplat/: Makefile  pyproject.toml
project/gsplat/custom/src/: pyproject.toml
project/nerfstudio/: Dockerfile  Makefile  README.md
