[project]
name = "gsplat-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.9.1",
    "ninja",
    "jaxtyping",
    "rich",
    "gsplat"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
name = "gsplat"
url = "https://docs.gsplat.studio/whl/pt24cu124"

[tool.uv.sources]
torch = { index = "pytorch"}
gsplat = { index = "gsplat"}
